cau3/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cau3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
